bdr.BDR.scala.error
Compilation error:
BDR:2: error: identifier expected but string literal found.
  if(readMessage():"R"){
                   ^BDR:31: error: ')' expected but '}' found.
} 
^